--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@drincs/nqtr": "^0.0.1",
     "@drincs/pixi-vn": "^0.3.0",
     "@drincs/react-components": "^0.2.0",
     "i18next": "^23.11.2",
