--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.2.12",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
